writerfilter/source/dmapper/DomainMapper.cxx
@@ -1635,7 +1635,8 @@ void DomainMapper::sprmWithProps( Sprm& rSprm, PropertyMapPtr rContext, SprmType
             {
                 //style sheets cannot have a numbering rule attached
                 StyleSheetPropertyMap* pStyleSheetPropertyMap = dynamic_cast< StyleSheetPropertyMap* >( rContext.get() );
-                pStyleSheetPropertyMap->SetListLevel( (sal_Int16)nIntValue );
+                if (pStyleSheetPropertyMap)
+                    pStyleSheetPropertyMap->SetListLevel( (sal_Int16)nIntValue );
             }
             else
                 rContext->Insert( PROP_NUMBERING_LEVEL, uno::makeAny( (sal_Int16)nIntValue ));
@@ -1649,7 +1650,8 @@ void DomainMapper::sprmWithProps( Sprm& rSprm, PropertyMapPtr rContext, SprmType
             {
                 //style sheets cannot have a numbering rule attached
                 StyleSheetPropertyMap* pStyleSheetPropertyMap = dynamic_cast< StyleSheetPropertyMap* >( rContext.get() );
-                pStyleSheetPropertyMap->SetListId( nIntValue );
+                if (pStyleSheetPropertyMap)
+                    pStyleSheetPropertyMap->SetListId( nIntValue );
             }
             if( pList.get( ) )
             {
@@ -1667,7 +1669,8 @@ void DomainMapper::sprmWithProps( Sprm& rSprm, PropertyMapPtr rContext, SprmType
                 {
                     // set the number id for AbstractNum references
                     StyleSheetPropertyMap* pStyleSheetPropertyMap = dynamic_cast< StyleSheetPropertyMap* >( rContext.get() );
-                    pStyleSheetPropertyMap->SetNumId( nIntValue );
+                    if (pStyleSheetPropertyMap)
+                        pStyleSheetPropertyMap->SetNumId( nIntValue );
                 }
                 else
                 {
